fix: z-index increase

--- a/src/pages/LookPage/LookPage.scss
+++ b/src/pages/LookPage/LookPage.scss
@@ -8,6 +8,7 @@
     margin-left: 80px;
     position: absolute;
     top: 134px;
+    z-index: 10;
 
     .location {
       color: #000;
